--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.etsy.android.grid:library:1.0.5'
+    compile 'com.pnikosis:materialish-progress:1.7'
 }
