--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.pnikosis:materialish-progress:1.7'
+    compile 'com.marshalchen.ultimaterecyclerview:library:0.3.18'
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.2@aar') {
+        transitive = true
+    }
 }
