--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
+    compile('com.github.afollestad.material-dialogs:core:0.8.5.2@aar') {
+        transitive = true
+    }
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.android.support:cardview-v7:23.1.1'
@@ -36,8 +39,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.6.1'
     compile 'com.etsy.android.grid:library:1.0.5'
     compile 'com.pnikosis:materialish-progress:1.7'
-    compile 'com.marshalchen.ultimaterecyclerview:library:0.3.18'
-    compile('com.github.afollestad.material-dialogs:core:0.8.5.2@aar') {
-        transitive = true
-    }
+    compile 'com.daimajia.swipelayout:library:1.2.0@aar'
 }
