--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:theme="@style/MainTheme">
         <activity
             android:name=".activity.MainActivity"
-            android:theme="@style/MainTheme">
+            android:theme="@style/MainTheme"
+            android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -33,7 +34,8 @@
         </activity>
         <activity
             android:name=".activity.ProductDetailActivity"
-            android:theme="@style/MainTheme" />
+            android:theme="@style/MainTheme"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
 
         <service android:name="com.parse.PushService" />
 
@@ -60,8 +62,10 @@
 
         <activity
             android:name=".activity.GalleryActivity"
-            android:theme="@style/Theme.Transparent" />
-        <activity android:name=".activity.LoginActivity" />
+            android:theme="@style/Theme.Transparent"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
+        <activity android:name=".activity.LoginActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"/>
     </application>
 
 </manifest>
